@@ -18,6 +18,7 @@ Other fixes:
  - GB Core: Fix toggling WIN and OBJ being swapped
  - All: Fix several memory leaks
  - LR35902: Fix trailing whitespace in disassembly
+ - Qt: Fix adjusting magnification in tile viewer when not fitting to window
 Misc:
  - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
  - Qt: Improve camera initialization
